// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ruleAbilities should report no permissions while loading data for cloud rule 1`] = `
{
  "create-alert-rule": {
    "cause": "NOT_SUPPORTED",
    "granted": false,
  },
  "delete-alert-rule": {
    "cause": "LOADING",
    "granted": false,
  },
  "delete-alert-rule-permanently": {
    "cause": "NOT_SUPPORTED",
    "granted": false,
  },
  "duplicate-alert-rule": {
    "cause": "LOADING",
    "granted": false,
  },
  "explore-alert-rule": {
    "cause": "LOADING",
    "granted": false,
  },
  "export-grafana-managed-rules": {
    "cause": "LOADING",
    "granted": false,
  },
  "modify-export-rule": {
    "cause": "NOT_SUPPORTED",
    "granted": false,
  },
  "pause-alert-rule": {
    "cause": "NOT_SUPPORTED",
    "granted": false,
  },
  "restore-alert-rule": {
    "cause": "NOT_SUPPORTED",
    "granted": false,
  },
  "silence-alert-rule": {
    "cause": "LOADING",
    "granted": false,
  },
  "update-alert-rule": {
    "cause": "LOADING",
    "granted": false,
  },
  "view-alert-rule": {
    "cause": "LOADING",
    "granted": false,
  },
}
`;

exports[`ruleAbilities should report that all actions are applicable for a Grafana Managed alert rule 1`] = `
{
  "create-alert-rule": {
    "cause": "NOT_SUPPORTED",
    "granted": false,
  },
  "delete-alert-rule": {
    "anyOfPermissions": [
      "alert.rules:delete",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
  "delete-alert-rule-permanently": {
    "anyOfPermissions": [
      "alert.rules:delete",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
  "duplicate-alert-rule": {
    "anyOfPermissions": [
      "alert.rules:create",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
  "explore-alert-rule": {
    "anyOfPermissions": [
      "datasources:explore",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
  "export-grafana-managed-rules": {
    "anyOfPermissions": [
      "alert.rules:read",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
  "modify-export-rule": {
    "anyOfPermissions": [
      "alert.rules:read",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
  "pause-alert-rule": {
    "anyOfPermissions": [
      "alert.rules:write",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
  "restore-alert-rule": {
    "anyOfPermissions": [
      "alert.rules:write",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
  "silence-alert-rule": {
    "anyOfPermissions": [
      "alert.silences:create",
      "alert.instances:create",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
  "update-alert-rule": {
    "anyOfPermissions": [
      "alert.rules:write",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
  "view-alert-rule": {
    "anyOfPermissions": [
      "alert.rules:read",
    ],
    "cause": "INSUFFICIENT_PERMISSIONS",
    "granted": false,
  },
}
`;
